--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,156 +1,38 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "best-practices"
 version = "0.1.0"
-description = "Best practices for Python projects"
+description = "A repository for Python coding best practices."
 readme = "README.md"
-requires-python = ">=3.9"
-license = {text = "MIT"}
-authors = [
-    {name = "Your Name", email = "your.email@example.com"},
-]
-maintainers = [
-    {name = "Your Name", email = "your.email@example.com"},
-]
+requires-python = ">=3.12"
+dependencies = []
 
-# Core dependencies
-dependencies = [
+[tool.uv]
+dev-dependencies = [
+    "pytest>=9.0.2",
+    "ruff>=0.6.0",
+    "mypy>=1.9.0",
+    "pre-commit>=4.0.0",
 ]
 
-[project.optional-dependencies]
-# Development dependencies
-dev = [
-    "pytest>=7.4.0",
-    "pytest-cov>=4.1.0",
-    "ruff>=0.1.0",
-    "mypy>=1.5.0",
-    "black>=23.9.0",
-    "isort>=5.12.0",
-]
-
-# Documentation dependencies
-docs = [
-    "sphinx>=7.2.0",
-    "sphinx-rtd-theme>=1.3.0",
-]
-
-# ============================================================================
-# Tool Configurations
-# ============================================================================
-
-[tool.hatch.version]
-path = "src/best_practices/__init__.py"
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "/src",
-    "/tests",
-    "/README.md",
-    "/LICENSE",
-]
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/best_practices"]
-
-# Pytest configuration
-[tool.pytest.ini_options]
-minversion = "7.0"
-addopts = [
-    "-ra",
-    "--strict-markers",
-    "--strict-config",
-    "--cov=best_practices",
-    "--cov-report=term-missing",
-    "--cov-report=html",
-]
-testpaths = ["tests"]
-pythonpath = ["src"]
-
-# Coverage configuration
-[tool.coverage.run]
-source = ["src/best_practices"]
-branch = true
-omit = [
-    "*/tests/*",
-    "*/__init__.py",
-]
-
-[tool.coverage.report]
-exclude_lines = [
-    "pragma: no cover",
-    "def __repr__",
-    "raise AssertionError",
-    "raise NotImplementedError",
-    "if __name__ == .__main__.:",
-    "if TYPE_CHECKING:",
-    "@abstractmethod",
-]
-
-# Ruff configuration (modern, fast linter and formatter)
 [tool.ruff]
-target-version = "py39"
 line-length = 88
-indent-width = 4
+target-version = "py312"
 
 [tool.ruff.lint]
-select = [
-    "E",      # pycodestyle errors
-    "W",      # pycodestyle warnings
-    "F",      # pyflakes
-    "I",      # isort
-    "B",      # flake8-bugbear
-    "C4",     # flake8-comprehensions
-    "UP",     # pyupgrade
-    "ARG",    # flake8-unused-arguments
-    "SIM",    # flake8-simplify
-]
-ignore = [
-    "E501",   # line too long (handled by formatter)
-    "B008",   # do not perform function calls in argument defaults
-]
-
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]
-"tests/*" = ["ARG"]
+# Enable Pyflakes (F), Pycodestyle (E, W), Isort (I), and Peformance (PERF)
+select = ["E", "F", "W", "I", "N", "UP", "PERF", "RUF"]
+ignore = []
 
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
-line-ending = "auto"
 
-# MyPy configuration (type checking)
 [tool.mypy]
-python_version = "3.9"
-warn_return_any = true
+python_version = "3.12"
+strict = true
 warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-strict_equality = true
+disallow_untyped_decorators = false
 
-[[tool.mypy.overrides]]
-module = "tests.*"
-disallow_untyped_defs = false
-
-# Black configuration (code formatter - if not using Ruff format)
-[tool.black]
-line-length = 88
-target-version = ["py39", "py310", "py311", "py312"]
-include = '\.pyi?$'
-
-# isort configuration (import sorting - if not using Ruff)
-[tool.isort]
-profile = "black"
-line_length = 88
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["src"]
