--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,64 +1,62 @@
-version: '3.8'
-
 services:
-  # MCP Server
-  mcp-server:
-    build:
-      context: ./mcp-server
-      dockerfile: Dockerfile
-    container_name: mcp-server
-    restart: unless-stopped
-    networks:
-      - chat-network
-    healthcheck:
-      test: [ "CMD", "python", "-c", "import sys; sys.exit(0)" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile
+  #   container_name: frontend
+  #   networks:
+  #     - app_network
+  #   env_file:
+  #     - path: ./frontend/.env
+  #       required: false
+  #   environment:
+  #     - PYTHONUNBUFFERED=1
+  #   depends_on:
+  #     - backend
+  #     - mcp_server
+  #   restart: unless-stopped
 
-  # Backend (FastAPI)
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     container_name: backend
+    networks:
+      - app_network
+    ports:
+      - "8080:8080"
+    env_file:
+      - path: ./backend/.env
+        required: true
+    environment:
+      - PYTHONUNBUFFERED=1
+    depends_on:
+      mcp_server:
+        condition: service_healthy
     restart: unless-stopped
+
+  mcp_server:
+    build:
+      context: ./mcp_server
+      dockerfile: Dockerfile
+    container_name: mcp_server
+    networks:
+      - app_network
     ports:
       - "8000:8000"
+    env_file:
+      - path: ./mcp_server/.env
+        required: false
     environment:
-      - GOOGLE_API_KEY=${GOOGLE_API_KEY}
-      - MCP_SERVER_HOST=mcp-server
-    depends_on:
-      - mcp-server
-    networks:
-      - chat-network
+      - PYTHONUNBUFFERED=1
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:8000/health" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-
-  # Frontend (Streamlit)
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    container_name: frontend
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
     restart: unless-stopped
-    ports:
-      - "8501:8501"
-    environment:
-      - BACKEND_URL=http://backend:8000
-    depends_on:
-      - backend
-    networks:
-      - chat-network
-    healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8501/_stcore/health" ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 networks:
-  chat-network:
+  app_network:
     driver: bridge
